Fix detection of USB device disconnects in USB host mode when the USB device is connected directly to the USB port of the DWC OTG, in this case a RPI-zero.

PR:		210695
Approved by:	re (gjb)
MFC after:	1 week